packages/core/src/typography.pcss
.sds-typography {
  &-editorial {
    &-headline {
      &--xxs {
        font-size: var(--sds-typography-editorial-headline-xxs-fontsize);
        font-weight: var(--sds-typography-editorial-headline-xxs-fontweight);
        line-height: var(--sds-typography-editorial-headline-xxs-lineheight);
      }

      &--xs {
        font-size: var(--sds-typography-editorial-headline-xs-fontsize);
        font-weight: var(--sds-typography-editorial-headline-xs-fontweight);
        line-height: var(--sds-typography-editorial-headline-xs-lineheight);
      }

      &--s {
        font-size: var(--sds-typography-editorial-headline-s-fontsize);
        font-weight: var(--sds-typography-editorial-headline-s-fontweight);
        line-height: var(--sds-typography-editorial-headline-s-lineheight);
      }

      &--m {
        font-size: var(--sds-typography-editorial-headline-m-fontsize);
        font-weight: var(--sds-typography-editorial-headline-m-fontweight);
        line-height: var(--sds-typography-editorial-headline-m-lineheight);
      }

      &--l {
        font-size: var(--sds-typography-editorial-headline-l-fontsize);
        font-weight: var(--sds-typography-editorial-headline-l-fontweight);
        line-height: var(--sds-typography-editorial-headline-l-lineheight);
      }

      &--xl {
        font-size: var(--sds-typography-editorial-headline-xl-fontsize);
        font-weight: var(--sds-typography-editorial-headline-xl-fontweight);
        line-height: var(--sds-typography-editorial-headline-xl-lineheight);
      }

      &--xxl {
        font-size: var(--sds-typography-editorial-headline-xxl-fontsize);
        font-weight: var(--sds-typography-editorial-headline-xxl-fontweight);
        line-height: var(--sds-typography-editorial-headline-xxl-lineheight);
      }
    }
  }

  &-application {
    &-headline {
      &--xxs {
        font-size: var(--sds-typography-application-headline-xxs-fontsize);
        font-weight: var(--sds-typography-application-headline-xxs-fontweight);
        line-height: var(--sds-typography-application-headline-xxs-lineheight);
      }

      &--xs {
        font-size: var(--sds-typography-application-headline-xs-fontsize);
        font-weight: var(--sds-typography-application-headline-xs-fontweight);
        line-height: var(--sds-typography-application-headline-xs-lineheight);
      }

      &--s {
        font-size: var(--sds-typography-application-headline-s-fontsize);
        font-weight: var(--sds-typography-application-headline-s-fontweight);
        line-height: var(--sds-typography-application-headline-s-lineheight);
      }

      &--m {
        font-size: var(--sds-typography-application-headline-m-fontsize);
        font-weight: var(--sds-typography-application-headline-m-fontweight);
        line-height: var(--sds-typography-application-headline-m-lineheight);
      }

      &--l {
        font-size: var(--sds-typography-application-headline-l-fontsize);
        font-weight: var(--sds-typography-application-headline-l-fontweight);
        line-height: var(--sds-typography-application-headline-l-lineheight);
      }

      &--xl {
        font-size: var(--sds-typography-application-headline-xl-fontsize);
        font-weight: var(--sds-typography-application-headline-xl-fontweight);
        line-height: var(--sds-typography-application-headline-xl-lineheight);
      }

      &--xxl {
        font-size: var(--sds-typography-application-headline-xxl-fontsize);
        font-weight: var(--sds-typography-application-headline-xxl-fontweight);
        line-height: var(--sds-typography-application-headline-xxl-lineheight);
      }
    }
  }

  &-label {
    font-size: var(--sds-typography-label-default-fontsize);
    font-weight: var(--sds-typography-label-default-fontweight);
    line-height: var(--sds-typography-label-default-lineheight);

    &--l {
      font-size: var(--sds-typography-label-l-fontsize);
      font-weight: var(--sds-typography-label-l-fontweight);
      line-height: var(--sds-typography-label-l-lineheight);
    }
  }

  &-overline {
    font-size: var(--sds-typography-overline-default-fontsize);
    font-weight: var(--sds-typography-overline-default-fontweight);
    line-height: var(--sds-typography-overline-default-lineheight);
    text-transform: uppercase;
  }

  &-body {
    font-size: var(--sds-typography-body-default-fontsize);
    font-weight: var(--sds-typography-body-default-fontweight);
    line-height: var(--sds-typography-body-default-lineheight);

    &--s {
      font-size: var(--sds-typography-body-s-fontsize);
      font-weight: var(--sds-typography-body-s-fontweight);
      line-height: var(--sds-typography-body-s-lineheight);
    }

    &--l {
      font-size: var(--sds-typography-body-l-fontsize);
      font-weight: var(--sds-typography-body-l-fontweight);
      line-height: var(--sds-typography-body-l-lineheight);
    }

    &--xl {
      font-size: var(--sds-typography-body-xl-fontsize);
      font-weight: var(--sds-typography-body-xl-fontweight);
      line-height: var(--sds-typography-body-xl-lineheight);
    }
  }

  &--emphasis,
  &--quote {
    font-style: italic;
  }

  &--strong {
    font-weight: 600;
  }

  &--code {
    font-family: monospace;
  }

  &--tabular-nums {
    font-variant-numeric: tabular-nums;
  }

  &--color {
    &-primary {
      color: var(--sds-color-text-primary);
    }

    &-secondary {
      color: var(--sds-color-text-secondary);
    }

    &-critical {
      color: var(--sds-color-text-critical);
    }
  }

  &-blockquote {
    font-size: var(--sds-typography-fontsize-600);
    font-weight: var(--sds-typography-fontweight-regular);
    line-height: var(--sds-typography-lineheight-m);
    margin: 0;
    padding-left: 48px;
    position: relative;
    quotes: "“" "”";

    &::before {
      content: open-quote;
      font-size: var(--sds-base-size-xl);
      position: absolute;
      margin-left: -48px;
    }

    &__quote {
      margin: 0;
    }
  }

  &-link {
    --link-icon-size: 1.3em;
    --link-icon-margin: var(--sds-space-gap-minimal);

    color: var(--sds-color-text-primary);
    display: inline-flex;
    gap: var(--link-icon-margin);
    text-decoration: underline;

    &--icon-left {
      flex-direction: row-reverse;
    }

    &__icon {
      align-items: center;
      display: inline-flex;
      font-size: var(--link-icon-size);
      justify-content: center;

      &--right {
        margin-left: var(--link-icon-margin);
      }

      &--left {
        margin-right: var(--link-icon-margin);
      }
    }

    &::after,
    &::before {
      background-color: var(--sds-color-text-primary);
    }

    &:hover,
    &:focus-visible {
      background-color: var(
        --sds-color-interaction-primary-transparent-highlight
      );
    }

    &:active {
      background-color: var(
        --sds-color-interaction-primary-transparent-pressed
      );
    }

    &:focus-visible {
      outline: var(--sds-focus-outline);
      outline-offset: 0;
    }

    &[target="_blank"],
    &--external,
    &--navigation {
      &::after {
        align-self: center;
        content: "";
        display: inline-block;
        mask-position: center right;
        mask-repeat: no-repeat;
        mask-size: var(--link-icon-size);
        min-width: var(--link-icon-size);
        min-height: var(--link-icon-size);
        width: var(--link-icon-size);
        height: var(--link-icon-size);
        margin-left: var(--link-icon-margin);
        vertical-align: sub;
      }
    }

    &[target="_blank"],
    &--external {
      &::after {
        mask-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 256 256"><path d="M224,100a8,8,0,0,1-16,0V59.3l-58.4,58.4A8,8,0,0,1,144,120a8.3,8.3,0,0,1-5.7-2.3,8,8,0,0,1,0-11.3L196.7,48H156a8,8,0,0,1,0-16h60a8,8,0,0,1,8,8Zm-40,36a8,8,0,0,0-8,8v64H48V80h64a8,8,0,0,0,0-16H48A16,16,0,0,0,32,80V208a16,16,0,0,0,16,16H176a16,16,0,0,0,16-16V144A8,8,0,0,0,184,136Z"/></svg>');
      }
    }

    &--navigation {
      &::after {
        mask-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 256 256" fill="currentColor"><path d="M128,24A104,104,0,1,0,232,128,104.11,104.11,0,0,0,128,24Zm0,192a88,88,0,1,1,88-88A88.1,88.1,0,0,1,128,216Zm45.66-93.66a8,8,0,0,1,0,11.32l-32,32a8,8,0,0,1-11.32-11.32L148.69,136H88a8,8,0,0,1,0-16h60.69l-18.35-18.34a8,8,0,0,1,11.32-11.32Z"/></svg>');
      }
    }

    &[href^="mailto:"],
    &[href^="tel:"] {
      &::before {
        align-self: center;
        content: "";
        display: inline-block;
        mask-position: center left;
        mask-repeat: no-repeat;
        mask-size: var(--link-icon-size);
        min-width: var(--link-icon-size);
        min-height: var(--link-icon-size);
        width: var(--link-icon-size);
        height: var(--link-icon-size);
        margin-right: var(--link-icon-margin);
        vertical-align: sub;
      }
    }

    &[href^="mailto:"] {
      &::before {
        mask-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 256 256"><path d="M224,48H32a8,8,0,0,0-8,8V192a16,16,0,0,0,16,16H216a16,16,0,0,0,16-16V56A8,8,0,0,0,224,48ZM203.4,64,128,133.1,52.6,64ZM216,192H40V74.2l82.6,75.7a8,8,0,0,0,10.8,0L216,74.2V192Z"/></svg>');
      }
    }

    &[href^="tel:"] {
      &::before {
        mask-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 256 256"><path d="M176,224C96.6,224,32,159.4,32,80A56.2,56.2,0,0,1,80.9,24.4,16.3,16.3,0,0,1,97.6,34l20.1,46.9A15.9,15.9,0,0,1,116.3,96L99.7,121.4h0a76.5,76.5,0,0,0,35.2,35L160,139.7a15.6,15.6,0,0,1,15.1-1.3l46.9,20a16.3,16.3,0,0,1,9.6,16.7A56.2,56.2,0,0,1,176,224ZM82.9,40.3A40,40,0,0,0,48,80,128.1,128.1,0,0,0,176,208a40,40,0,0,0,39.7-34.9l-46.9-20-25,16.7a16,16,0,0,1-15.7,1.1,92.5,92.5,0,0,1-42.8-42.6,16,16,0,0,1,1-15.7L103,87.2ZM135,156.5Z"/></svg>');
      }
    }

    &--no-icon {
      &[target="_blank"] {
        &::after {
          align-self: unset;
          content: unset;
          mask-image: unset;
          margin: unset;
          min-width: unset;
          min-height: unset;
          vertical-align: unset;
          width: unset;
          height: unset;
        }
      }

      &[href^="mailto:"],
      &[href^="tel:"] {
        &::before {
          align-self: unset;
          content: unset;
          mask-image: unset;
          margin: unset;
          min-width: unset;
          min-height: unset;
          vertical-align: unset;
          width: unset;
          height: unset;
        }
      }
    }
  }
}

